--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     
     <p>Hello world!</p>
 
-    <script src="js/script.js"></script>    
+    <script src="js/movies.js"></script>    
 </body>
 </html>
